prevent modals from going off screen

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -182,11 +182,16 @@ button {
   border-color: #ad2651;
   border-width: 2px;
   background: white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: black;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   width: 100%;
+  height: 100%;
   overflow-x: auto;
   max-width: 600px;
   animation: modalFadeIn 0.3s ease;
@@ -199,8 +204,13 @@ button {
   color: black;
   padding: 20px;
   border-radius: 12px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   width: 100%;
+  height: 100%;
   max-width: 600px;
   max-height: 800px;
   overflow-x: auto;
